--- a/css/link.css
+++ b/css/link.css
@@ -15,6 +15,9 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 .link_blueLine.have_mark:after, .link_brightBlue.have_mark:after, .link_gray.have_mark:after { display: inline-block; content: '\e906'; font-family: 'icon'; font-size: 1rem; margin-left: 3px; }
 @media screen and (max-width: 449px) and (min-width: 0) { .link_blueLine, .link_brightBlue, .link_gray { width: 90%; text-align: center; padding: 15px 16px; } }
 
+.line_brightBlue { padding: 12px 20px; font-size: 1rem; color: #2f31e5; border: 1px solid #2f31e5; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; }
+@media screen and (max-width: 449px) and (min-width: 0) { .line_brightBlue { width: 90%; } }
+
 .link_blueLine { color: #2f31e5; background-color: white; border: 1px solid #2f31e5; }
 .link_blueLine:hover { color: white; background-color: #2f31e5; opacity: .9; }
 
@@ -56,6 +59,7 @@ a { display: inline-block; cursor: pointer; text-decoration: none; -moz-transiti
 button { display: inline-block; outline: 0; cursor: pointer; }
 
 .btn_status_box { width: 40px; height: 40px; border: 0; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 40px; text-align: center; background-color: transparent; font-size: 1.2rem; float: right; }
+.btn_status_box.c_blue2 { color: #092058; }
 .btn_status_box.c_green { color: #6db53a; }
 .btn_status_box.c_gray { color: #a5a5a5; }
 .btn_status_box.c_gray.member:hover { color: #ff9800; }
@@ -68,3 +72,4 @@ button { display: inline-block; outline: 0; cursor: pointer; }
 
 .btn_done { display: inline-block; font-size: 1.2rem; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; background-color: #092058; color: white; padding: 8px 15px; float: right; cursor: pointer; border: 0; line-height: 28px; }
 @media screen and (max-width: 449px) and (min-width: 0) { .btn_done { font-size: 1rem; } }
+.btn_done.btn_done_qr { padding: 0 15px; height: 30px; line-height: 30px; }
