--- a/css/type.css
+++ b/css/type.css
@@ -38,6 +38,7 @@ p { display: inline-block; padding: 0; margin: 0; }
 
 .type_data_title { font-size: 1.4rem; font-weight: 700; color: #2f31e5; }
 .type_data_title.type_data_gray { color: rgba(165, 165, 165, 0.5); }
+.type_data_title.type_data_thin { font-weight: 400; }
 
 .link_code { font-size: 2.8rem; font-weight: 900; color: #858ea6; }
 
@@ -49,18 +50,23 @@ input { outline: 0; background-color: transparent; }
 
 .inEnter { display: inline-block; width: calc(100% - 50px * 2); padding: 8px 15px 8px 0; border: 0; font-size: 1.2rem; color: #092058; font-weight: 700; text-align: left; overflow: hidden; }
 .inEnter.in_all { width: calc(100% - 70px); padding: 0; line-height: 40px; }
+@media screen and (max-width: 449px) and (min-width: 0) { .inEnter { font-size: 1rem; line-height: 25px; padding: 7px 0; } }
 
 .addEnter { color: #a5a5a5; font-weight: 400; }
 .addEnter.addEnter2 { color: rgba(165, 165, 165, 0.5); pointer-events: none; cursor: default; }
 
-.input_box { display: inline-block; width: 100%; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; margin-bottom: 18px; position: relative; }
+.input_box { display: inline-block; width: 100%; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; margin-bottom: 18px; *zoom: 1; position: relative; }
+.input_box:after { display: table; content: ""; line-height: 0; clear: both; }
 .input_box.input_box_top15 { margin-top: 15px; margin-bottom: 5px; }
-.input_box.input_search { width: calc(100% - 50px); }
-.input_box.input_search90 { width: calc(100% - 90px); }
+.input_box.input_search { width: calc(100% - 50px); text-align: left; }
+@media screen and (max-width: 449px) and (min-width: 0) { .input_box.input_search { float: left; } }
+.input_box.input_search90 { width: calc(100% - 90px); text-align: left; }
+@media screen and (max-width: 449px) and (min-width: 0) { .input_box.input_search90 { float: left; } }
 
 .social_box { display: inline-block; width: 40px; height: 40px; -moz-border-radius: 20px; -webkit-border-radius: 20px; border-radius: 20px; line-height: 40px; text-align: center; background-color: #092058; border: 1px solid #092058; margin-right: 9px; color: white; font-size: 1.2rem; }
 .social_box.member_box { background-color: #858ea6; border: 1px solid #858ea6; }
 .social_box.serch_box { background-color: transparent; border: 0; color: #2f31e5; }
+.social_box.team_box { color: #ff9800; }
 
 .borderGray_TD { border-top: 1px dotted rgba(165, 165, 165, 0.5); border-bottom: 1px dotted rgba(165, 165, 165, 0.5); margin: 20px 0; }
 
