--- a/css/public.css
+++ b/css/public.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 *, *:after, *:before { vertical-align: top; -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; -moz-osx-font-smoothing: subpixel-antialiased; -webkit-font-smoothing: subpixel-antialiased; -moz-font-smoothing: subpixel-antialiased; -ms-font-smoothing: subpixel-antialiased; -o-font-smoothing: subpixel-antialiased; }
 
 html { height: 100%; min-height: 100%; margin: 0; padding: 0; }
@@ -16,6 +17,24 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box header { margin: 15px 0 30px 0; } }
 .page_boxs .page_box header nav { display: inline-block; float: right; }
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box header nav { display: none; } }
+.page_boxs .page_box header nav .nav_boxs { display: inline-block; width: 100%; float: left; *zoom: 1; }
+.page_boxs .page_box header nav .nav_boxs:after { display: table; content: ""; line-height: 0; clear: both; }
+.page_boxs .page_box header nav .nav_boxs > span { position: relative; }
+.page_boxs .page_box header nav .nav_boxs > span div { display: none; }
+.page_boxs .page_box header nav .nav_boxs > span:hover > div { display: block; width: 140px; background-color: white; margin-left: -52px; z-index: 888; position: absolute; -moz-border-radius: 4px; -webkit-border-radius: 4px; border-radius: 4px; -moz-box-shadow: 0 0px 4px 0 rgba(0, 35, 11, 0.2); -webkit-box-shadow: 0 0px 4px 0 rgba(0, 35, 11, 0.2); box-shadow: 0 0px 4px 0 rgba(0, 35, 11, 0.2); }
+.page_boxs .page_box header nav .nav_boxs > span:hover > div > a { display: block; width: 100%; height: 50px; line-height: 50px; font-size: .9rem; float: none; text-align: left; color: #092058; text-decoration: none; border-bottom: 1px solid rgba(165, 165, 165, 0.5); text-align: center; -moz-transition: background-color 0.3s; -o-transition: background-color 0.3s; -webkit-transition: background-color 0.3s; transition: background-color 0.3s; }
+.page_boxs .page_box header nav .nav_boxs > span:hover > div > a:last-child { border-bottom: 0; }
+.page_boxs .page_box header nav .nav_boxs > span:hover > div > a:hover { color: #2f31e5; }
+.page_boxs .page_box header nav .nav_boxs > span, .page_boxs .page_box header nav .nav_boxs > a { display: inline-block; cursor: pointer; height: 37px; line-height: 37px; -moz-transition: all 0.3s; -o-transition: all 0.3s; -webkit-transition: all 0.3s; transition: all 0.3s; *zoom: 1; color: #092058; font-size: 1rem; font-weight: 400; }
+.page_boxs .page_box header nav .nav_boxs > span:after, .page_boxs .page_box header nav .nav_boxs > a:after { display: table; content: ""; line-height: 0; clear: both; }
+.page_boxs .page_box header nav .nav_boxs > span:hover, .page_boxs .page_box header nav .nav_boxs > span:active, .page_boxs .page_box header nav .nav_boxs > a:hover, .page_boxs .page_box header nav .nav_boxs > a:active { color: #2f31e5; text-decoration: underline; }
+.page_boxs .page_box header nav .nav_boxs > span:last-child:after, .page_boxs .page_box header nav .nav_boxs > a:last-child:after { display: none; }
+.page_boxs .page_box header nav .nav_boxs > span:after, .page_boxs .page_box header nav .nav_boxs > a:after { display: inline-block; content: '・'; margin: 0 10px; line-height: 37px; }
+.page_boxs .page_box header nav .nav_boxs > span.web_ac, .page_boxs .page_box header nav .nav_boxs > a.web_ac { color: #2f31e5; text-decoration: underline; }
+.page_boxs .page_box header nav .nav_boxs > span.web_no, .page_boxs .page_box header nav .nav_boxs > a.web_no { color: #a5a5a5; pointer-events: none; cursor: default; }
+.page_boxs .page_box header nav .nav_boxs > span.web_no:after, .page_boxs .page_box header nav .nav_boxs > a.web_no:after { display: inline-block; content: '・'; color: #092058; }
+.page_boxs .page_box header nav .nav_boxs > span.link_login2, .page_boxs .page_box header nav .nav_boxs > a.link_login2 { padding: 0 14px; background-color: white; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; color: #2f31e5; font-size: 1rem; font-weight: 500; line-height: 37px; }
+.page_boxs .page_box header nav .nav_boxs > span.link_login2:hover, .page_boxs .page_box header nav .nav_boxs > a.link_login2:hover { background-color: #2f31e5; color: white; text-decoration: none; }
 .page_boxs .page_box header .m_Hamburg { display: none; }
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box header .m_Hamburg { display: inline-block; float: right; width: 30px; height: 30px; color: #092058; font-size: 1.6rem; margin-top: 6px; } }
 .page_boxs .page_box main .cent_boxs { display: inline-block; width: 100%; background-color: white; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; -moz-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); padding: 35px 0; *zoom: 1; }
