--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,7 @@ html { height: 100%; margin: 0; padding: 0; }
 .i_bg { display: inline-block; width: 100%; height: 100%; *zoom: 1; position: relative; margin: 0px; padding: 0px; background-image: url("../img/w_bg.png"); background-repeat: no-repeat; background-attachment: fixed; background-position: 0 0; background-size: contain; }
 .i_bg:after { display: table; content: ""; line-height: 0; clear: both; }
 @media screen and (max-width: 1399px) and (min-width: 450px) { .i_bg { background-size: 60% 100%; } }
-@media screen and (max-width: 449px) and (min-width: 0) { .i_bg { background-size: 107% 58%; background-position: 0 bottom; } }
+@media screen and (max-width: 449px) and (min-width: 0) { .i_bg { background-size: 101% 58%; background-position: 0 bottom; background-image: url("../img/m_bg.png"); background-repeat: no-repeat; background-attachment: fixed; } }
 .i_bg .i_box_l, .i_bg .i_box_r { display: inline-block; width: 50%; height: 100vh; *zoom: 1; }
 .i_bg .i_box_l:after, .i_bg .i_box_r:after { display: table; content: ""; line-height: 0; clear: both; }
 @media screen and (max-width: 449px) and (min-width: 0) { .i_bg .i_box_l, .i_bg .i_box_r { width: 100%; padding: 15px; height: auto; } }
