--- a/scss/link.scss
+++ b/scss/link.scss
@@ -45,6 +45,16 @@ a {
   margin-top: -2px;
 }
 
+.link_little {
+  font-size: 1.2rem;
+  font-weight: 400;
+  color: $light_blue;
+
+  @include range-width(0, 450px) {
+    font-size: 1rem;
+  }
+}
+
 .link_login {
   padding: 8px 14px;
   background-color: white;
