--- a/scss/type.scss
+++ b/scss/type.scss
@@ -98,6 +98,10 @@ p {
   @include range-width(0, 450px) {
     font-size: 1rem;
   }
+
+  &.team_gray {
+    color: $gray;
+  }
 }
 
 .link_title {
@@ -139,6 +143,12 @@ p {
   &.type_data_thin {
     font-weight: 400;
   }
+}
+
+.big_blue_type {
+  font-size: 2.8rem;
+  font-weight: 700;
+  color: $deep_blue;
 }
 
 
