--- a/scss/public.scss
+++ b/scss/public.scss
@@ -1,8 +1,8 @@
 @import "Ginkgo";
 
 html {
-  height: 100%;
-  min-height: 100%;
+  // height: 100vh;
+  min-height: 100vh;
   margin: 0; 
   padding: 0;
 }
@@ -12,8 +12,8 @@ body {
 
   display: inline-block;
   width: 100%;
-  min-height: 100%;
-  height: 100%;
+  min-height: 100vh;
+  // height: 100vh;
 
   margin: 0;
   padding: 0;
@@ -61,7 +61,7 @@ $orange: rgba(255, 152, 0, 1.00); // 輔助色・橘色
 .page_boxs {
   display: inline-block;
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
   max-width: 1100px;
   margin: 0 auto;
 
