--- a/css/icon.css
+++ b/css/icon.css
@@ -1,5 +1,7 @@
-@font-face { font-family: "icon"; src: url('../font/icomoon/fonts/icomoon.eot?1598708938') format('embedded-opentype'), url('../font/icomoon/fonts/icomoon.woff?1598708938') format('woff'), url('../font/icomoon/fonts/icomoon.ttf?1598708938') format('truetype'), url('../font/icomoon/fonts/icomoon.svg?1598708938') format('svg'); }
+@font-face { font-family: "icon"; src: url('../font/icomoon/fonts/icomoon.eot?1601106378') format('embedded-opentype'), url('../font/icomoon/fonts/icomoon.woff?1601106378') format('woff'), url('../font/icomoon/fonts/icomoon.ttf?1601106378') format('truetype'), url('../font/icomoon/fonts/icomoon.svg?1601106378') format('svg'); }
 *[class^="icon-"]:before, *[class*=" icon-"]:before { font-family: "icon"; speak: none; font-style: normal; font-weight: normal; font-variant: normal; }
+
+.icon-venmo:before { content: "\e921"; }
 
 .icon-bubble_chart---material:before { content: "\e91f"; }
 
@@ -44,6 +46,10 @@
 .icon-Address-Card---FontAwesomeCopy-3:before { content: "\e91c"; }
 
 .icon-qrcode---FontAwesome:before { content: "\e91d"; }
+
+.icon-eye:before { content: "\f06e"; }
+
+.icon-eye-slash:before { content: "\f070"; }
 
 .icon-chain:before { content: "\f0c1"; }
 
