--- a/css/public.css
+++ b/css/public.css
@@ -35,6 +35,7 @@ body.bg_color_p { /* Permalink - use to edit and share this gradient: https://co
 .page_boxs .page_box header nav .nav_boxs > span.web_no:after, .page_boxs .page_box header nav .nav_boxs > a.web_no:after { display: inline-block; content: '・'; color: #092058; }
 .page_boxs .page_box header nav .nav_boxs > span.link_login2, .page_boxs .page_box header nav .nav_boxs > a.link_login2 { padding: 0 14px; background-color: white; -moz-border-radius: 30px; -webkit-border-radius: 30px; border-radius: 30px; color: #2f31e5; font-size: 1rem; font-weight: 500; line-height: 37px; }
 .page_boxs .page_box header nav .nav_boxs > span.link_login2:hover, .page_boxs .page_box header nav .nav_boxs > a.link_login2:hover { background-color: #2f31e5; color: white; text-decoration: none; }
+.page_boxs .page_box header nav .nav_boxs > span.link_login2:after, .page_boxs .page_box header nav .nav_boxs > a.link_login2:after { display: none; }
 .page_boxs .page_box header .m_Hamburg { display: none; }
 @media screen and (max-width: 449px) and (min-width: 0) { .page_boxs .page_box header .m_Hamburg { display: inline-block; float: right; width: 30px; height: 30px; color: #092058; font-size: 1.6rem; margin-top: 6px; } }
 .page_boxs .page_box main .cent_boxs { display: inline-block; width: 100%; background-color: white; -moz-border-radius: 10px; -webkit-border-radius: 10px; border-radius: 10px; -moz-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); box-shadow: 0 1px 4px 0 rgba(0, 35, 11, 0.2); padding: 35px 0; *zoom: 1; }
