--- a/font/icomoon/style.css
+++ b/font/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?dwxpge');
-  src:  url('fonts/icomoon.eot?dwxpge#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?dwxpge') format('truetype'),
-    url('fonts/icomoon.woff?dwxpge') format('woff'),
-    url('fonts/icomoon.svg?dwxpge#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?jk03c0');
+  src:  url('fonts/icomoon.eot?jk03c0#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?jk03c0') format('truetype'),
+    url('fonts/icomoon.woff?jk03c0') format('woff'),
+    url('fonts/icomoon.svg?jk03c0#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-venmo:before {
+  content: "\e921";
+}
 .icon-bubble_chart---material:before {
   content: "\e91f";
 }
@@ -90,6 +93,12 @@
 }
 .icon-qrcode---FontAwesome:before {
   content: "\e91d";
+}
+.icon-eye:before {
+  content: "\f06e";
+}
+.icon-eye-slash:before {
+  content: "\f070";
 }
 .icon-chain:before {
   content: "\f0c1";
