--- a/scss/icon.scss
+++ b/scss/icon.scss
@@ -22,6 +22,7 @@
   font-variant: normal;
 }
 
+.icon-venmo:before { content: "\e921"; }
 .icon-bubble_chart---material:before { content: "\e91f"; }
 .icon-email:before { content: "\e900"; }
 .icon-instagram:before { content: "\e901"; }
@@ -44,6 +45,8 @@
 .icon-user---anticoncopy-3:before { content: "\e91b"; }
 .icon-Address-Card---FontAwesomeCopy-3:before { content: "\e91c"; }
 .icon-qrcode---FontAwesome:before { content: "\e91d"; }
+.icon-eye:before { content: "\f06e"; }
+.icon-eye-slash:before { content: "\f070"; }
 .icon-chain:before { content: "\f0c1"; }
 .icon-link:before { content: "\f0c1"; }
 .icon-error:before { content: "\e91e"; }
